force-app/main/default/objects/Distributor__c/Distributor__c.object-meta.xml
<CustomObject>
    <label>Distributor</label>
    <nameField>
        <label>Distributor Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>