force-app/main/default/objects/Distributor__c/fields/Alternate_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_No__c</fullName>
    <inlineHelpText>10 Digits Mobile Number</inlineHelpText>
    <label>Alternate Mobile No.</label>
    <type>Phone</type>
</CustomField>