force-app/main/default/objects/Distributor__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>Credit Limit for distributor. Dispatches above this limit may not be approved.</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>