force-app/main/default/objects/Distributor__c/fields/Distributor_Address__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Address__c</fullName>
    <label>Distributor Address</label>
    <type>TextArea</type>
</CustomField>