force-app/main/default/objects/Distributor__c/fields/Distributor_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact_Person__c</fullName>
    <label>Distributor Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>