force-app/main/default/objects/Distributor__c/fields/Distributor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Mobile__c</fullName>
    <inlineHelpText>10 Digits mobile Number</inlineHelpText>
    <label>Distributor Mobile</label>
    <type>Phone</type>
</CustomField>