force-app/main/default/objects/Distributor__c/validationRules/Distributor_Mobile_10_Digits_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Distributor_Mobile_10_Digits_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK(  Distributor_Mobile__c  )),OR(NOT(LEN( Distributor_Mobile__c  ) = 10),CONTAINS(  Distributor_Mobile__c  ,&apos;.&apos;),NOT(ISNUMBER(  Distributor_Mobile__c  ))),false)</errorConditionFormula>
    <errorMessage>Mobile Number Should be 10 Digits</errorMessage>
</ValidationRule>